@@ -88,3 +88,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20030919 configure.in: link against glib, gcrypt and zlib if available
 	 (Darren).
 20030921 crypto.c, libspectrum.c, rzx.c: use libgcrypt 1.1.42.
+20030922 crypto.c: use gcry_pk_testkey to test secret key sanity.
